<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Fora</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="app_id">871635946236749</string>
    <!-- Common String -->
    <string name="text_enter_email_id">Email Address</string>
    <string name="text_password">Password</string>
    <string name="text_no_network">No network found</string>
    <string name="toast_email_id_valid">Please enter valid email address</string>
    <string name="toast_email_id">Please enter your email address</string>
    <string name="toast_user_first_name">Please enter first name</string>
    <string name="toast_user_last_name">Please enter last name</string>
    <string name="toast_pswd">Please enter your password</string>
    <string name="toast_pswd_len">Password should have atleast 6 characters</string>
    <string name="text_user_name_profile">%1$s ,%2$s</string>
    <!-- Sign In Activity -->
    <string name="text_login">LOGIN</string>
    <string name="text_register">New User? Register an Account Now</string>
    <string name="text_forget_pswd">Forgot Password ?</string>
    <string name="text_login_via_facebook">LOGIN WITH FACEBOOK</string>
    <!-- Sign Up Activity -->
    <string name="text_firstname">First Name</string>
    <string name="text_lastname">Last Name</string>
    <string name="text_gender">Gender</string>
    <string name="text_male">Male</string>
    <string name="text_female">Female</string>
    <string name="text_no_resource_found">No Resource Found</string>
    <string name="text_register_sign_up_cap">REGISTER</string>
    <string name="text_register_sign_up">Register</string>
    <string name="title_activity_forgot_pswd">ForgotPswdActivity</string>
    <string name="hello_world">Hello world!</string>
    <!-- dialog -->
    <string name="text_gallery">Gallery</string>
    <string name="text_camera">Camera</string>
    <!-- Passcode -->
    <string name="text_passcode">Passcode</string>
    <string name="text_new_password">New Password</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="text_ok">OK</string>
    <string name="text_please_wait">Please Wait!!!</string>
    <string name="toast_passcode">Please enter your passcode</string>
    <string name="toast_new_pswd">Please enter your new password</string>
    <string name="text_match_pswd">Password does not match</string>
    <string name="toast_confirm_pswd">Please confirm your password</string>
    <string name="text_passcode_default">A passcode has been sent on your email address. Please enter the passcode below</string>
    <!-- Forget Pswd -->
    <string name="text_send">SEND</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="text_forgot_pswd">Forgot Password</string>
    <string name="text_forgot_pswd_default">Please enter your email address</string>
    <string name="title_activity_create_interest">CreateInterestActivity</string>

    <!-- Create Interest -->
    <string name="text_create_interest">Create Interest</string>
    <string name="text_interest_name">Interest Name</string>
    <string name="text_interest_description">Description</string>
    <string name="text_pswd_protected">Make Password Protected</string>
    <string name="text_create">Create</string>
    <string name="text_allow">Allow in Messages</string>
    <string name="text_choose_img">Choose your mask for creating interest</string>

    <!-- Home -->
    <string name="text_interest">Interests</string>
    <string name="text_activity_feeds">Activity Feeds</string>
    <string name="text_recent">Recents</string>
    <string name="text_popular">Popular</string>
    <string name="title_activity_interest_detail">InterestDetailActivity</string>

    <!-- Interest detail -->
    <string name="text_message">Message</string>

    <!-- Profile -->
    <string name="text_sub_interest">Subscribed Interests</string>
    <string name="text_my_created">My Cresasasated sss</string>
    
    
    <!-- list of like unlike comment -->
    <string name="text_total_likes">Total likes : </string>
    
    
    <!-- edit profile -->
    <string name="text_edit_profile">Edit Profile</string>
    <string name="text_save_changes">Save Changes</string>

</resources>