<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_white" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/c_white" >

            <RelativeLayout
                android:id="@+id/rl_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d_margin_12" >

                <ImageView
                    android:id="@+id/img_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/p_margin_10"
                    android:src="@drawable/back" />

                <TextView
                    android:id="@+id/tv_forget_pswd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/text_forgot_pswd"
                    android:textColor="@color/c_forgot_pswd_heading_3a3a3a"
                    android:textSize="@dimen/s_text_20" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_heading"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/d_margin_50"
                android:src="@drawable/splash" />

            <TextView
                android:id="@+id/tv_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_logo"
                android:layout_marginTop="@dimen/d_margin_80_IMG_VIEW"
                android:gravity="center"
                android:hint="@string/text_forgot_pswd_default"
                android:paddingLeft="@dimen/d_margin_30"
                android:paddingRight="@dimen/d_margin_30"
                android:textColor="@color/c_login_text_color_3b3b3b"
                android:textSize="@dimen/s_text_18" />

            <LinearLayout
                android:id="@+id/ll_view1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_default"
                android:layout_marginTop="@dimen/d_margin_30"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/d_margin_40"
                    android:layout_marginRight="@dimen/d_margin_40"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/email" />

                    <EditText
                        android:id="@+id/et_email_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/text_enter_email_id"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/p_margin_10"
                        android:singleLine="true"
                        android:textColor="@color/c_login_text_color_3b3b3b"
                        android:textSize="@dimen/s_text_20" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/d_margin_1_view"
                    android:layout_marginLeft="@dimen/d_margin_30"
                    android:layout_marginRight="@dimen/d_margin_40"
                    android:background="@color/c_login_text_color_3b3b3b" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ll_view1"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/d_margin_30"
                android:layout_marginRight="@dimen/d_margin_40"
                android:layout_marginTop="@dimen/d_margin_50"
                android:background="@drawable/xml_button_backgroung_login_green"
                android:text="@string/text_send"
                android:textColor="@color/c_white"
                android:textSize="@dimen/s_text_20"
                android:textStyle="bold" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>