<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_white"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/ll_register_here"
        android:isScrollContainer="false" >

        <ViewFlipper
            android:id="@+id/viewflipper"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <ScrollView
                android:id="@+id/scroll_container"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/c_white"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/img_logo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/d_margin_80_IMG_VIEW"
                        android:src="@drawable/splash" />

                    <LinearLayout
                        android:id="@+id/ll_view1"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:layout_below="@+id/img_logo"
                        android:layout_marginTop="@dimen/d_margin_30"
                        android:orientation="vertical" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/d_margin_40"
                            android:layout_marginRight="@dimen/d_margin_40"
                            android:orientation="horizontal" >

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/email" />

                            <EditText
                                android:id="@+id/et_email"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@null"
                                android:hint="@string/text_enter_email_id"
                                android:inputType="textEmailAddress"
                                android:padding="@dimen/p_margin_10"
                                android:singleLine="true"
                                android:textColor="@color/c_login_text_color_3b3b3b"
                                android:textSize="@dimen/s_text_20" />
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/d_margin_1_view"
                            android:layout_marginLeft="@dimen/d_margin_30"
                            android:layout_marginRight="@dimen/d_margin_30"
                            android:background="@color/c_login_text_color_3b3b3b" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/d_margin_40"
                            android:layout_marginRight="@dimen/d_margin_40"
                            android:orientation="horizontal" >

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/password" />

                            <EditText
                                android:id="@+id/et_pswd"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@null"
                                android:hint="@string/text_password"
                                android:inputType="textPassword"
                                android:maxLength="10"
                                android:padding="@dimen/p_margin_10"
                                android:imeOptions="actionDone"
                                android:singleLine="true"
                                android:textSize="@dimen/s_text_20" />
                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/d_margin_1_view"
                            android:layout_marginLeft="@dimen/d_margin_30"
                            android:layout_marginRight="@dimen/d_margin_30"
                            android:background="@color/c_login_text_color_3b3b3b" />

                        <TextView
                            android:id="@+id/tv_forget_pswd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:paddingRight="@dimen/d_margin_30"
                            android:paddingTop="@dimen/d_margin_8"
                            android:text="@string/text_forget_pswd"
                            android:textColor="@color/c_login_text_color_blue_0c93d3"
                            android:textSize="@dimen/s_text_15" />

                        <Button
                            android:id="@+id/btn_login"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/d_margin_30"
                            android:layout_marginRight="@dimen/d_margin_30"
                            android:layout_marginTop="@dimen/d_margin_20"
                            android:background="@drawable/xml_button_backgroung_login_green"
                            android:text="@string/text_login"
                            android:textColor="@color/c_white"
                            android:textSize="@dimen/s_text_18"
                            android:textStyle="bold" />

                        <!--
                     <Button
                    android:id="@+id/btn_fb_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/d_margin_20"
                    android:layout_marginRight="@dimen/d_margin_20"
                    android:layout_marginTop="@dimen/d_margin_5"
                    android:background="@drawable/xml_facebook_base_background"
                    android:text="@string/text_login_via_facebook"
                    android:textColor="@color/c_white"
                    android:textSize="@dimen/s_text_20"
                    android:textStyle="bold" />
                        -->

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/d_margin_30"
                            android:layout_marginRight="@dimen/d_margin_30"
                            android:layout_marginTop="@dimen/d_margin_5"
                            android:background="@drawable/xml_facebook_base_background"
                            android:orientation="horizontal"
                            android:weightSum="1" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:background="@drawable/xml_button_backgroung_facebook_blue"
                                android:gravity="center"
                                android:paddingBottom="@dimen/d_margin_14"
                                android:paddingLeft="@dimen/d_margin_25"
                                android:paddingRight="@dimen/d_margin_25"
                                android:paddingTop="@dimen/d_margin_14"
                                android:text="f"
                                android:textColor="@color/c_white"
                                android:textSize="@dimen/s_text_25"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/btn_fb_login"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/text_login_via_facebook"
                                android:textColor="@color/c_white"
                                android:textSize="@dimen/s_text_18"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>
                </RelativeLayout>
            </ScrollView>
        </ViewFlipper>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_register_here"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/d_margin_20"
        android:gravity="center" >

        <TextView
            android:id="@+id/tv_register_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/p_margin_10"
            android:drawableRight="@drawable/go"
            android:text="@string/text_register"
            android:textColor="@color/c_login_text_color_3b3b3b"
            android:textSize="@dimen/s_text_15" />
    </LinearLayout>

</RelativeLayout>